z-index of final-card-layout issue

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -50,8 +50,8 @@ body {
   top: 50%;
   left: 50%;
   margin-right: -50%;
+  z-index: 11;
   transform: translate(-50%, -50%);
-  z-index: 12;
   div:first-child {
     height:85px;width:100%;margin-bottom: 40px;
   }
